github-chart/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: node-ingress
  labels:
    name: node-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend: 
          service:
            name: node-service
            port:
              number: 80
        path: /github(/|$)(.*)
        pathType: ImplementationSpecific
